removed tinymce, included tinymce lib submodule, updated markdown lib reference, fixed lib bindings in sai

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/markdown"]
 	path = lib/markdown
 	url = git@mojotrollz.eu:webcraft/lib_markdown.git
+[submodule "lib/tinymce"]
+	path = lib/tinymce
+	url = git@mojotrollz.eu:webcraft/lib_tinymce.git
