added growl to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,9 @@
 [submodule "lib/tinymce"]
 	path = lib/tinymce
 	url = git@mojotrollz.eu:webcraft/lib_tinymce.git
+[submodule "lib/bootstrap_growl"]
+	path = lib/bootstrap_growl
+	url = git@mojotrollz.eu:webcraft/lib_bootstrap-growl.git
 [submodule "lib/textillate"]
 	path = lib/textillate
 	url = git@mojotrollz.eu:webcraft/lib_textillate.git
