--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,9 @@
 [submodule "lib/jstree"]
 	path = lib/jstree
 	url = ../lib_jstree.git
+[submodule "lib/font_awesome"]
+	path = lib/font_awesome
+	url = gogs@webcraft-media.de:webcraft/lib_font_awesome.git
+[submodule "lib/popper"]
+	path = lib/popper
+	url = D:\\sources\\web\\test\\democracy\\lib\\system\\lib\\popper
